allow removal of history items via RDF sr=waterson, bug #11412